--- a/flask-jinja/templates/index.html
+++ b/flask-jinja/templates/index.html
@@ -9,4 +9,9 @@
     <h2>{{ 5 * 6 }}</h2>
     <h3>Random Number: {{ num }}</h3>
 </body>
+<footer>
+    <p>
+        Copyright {{ current_year }}. Built by {{ me }}.
+    </p>
+</footer>
 </html>
