--- a/forms-html/templates/index.html
+++ b/forms-html/templates/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
     <h1>Form Test</h1>
+    <form>
+        <label for="name">Name: </label>
+        <input type="text" id="name" placeholder="name">
+        <label for="password">Password: </label>
+        <input type="text" id="password" placeholder="password">
+        <button type="button">Ok</button>
+    </form>
 </body>
 </html>
