--- a/forms-html/templates/index.html
+++ b/forms-html/templates/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <h1>Form Test</h1>
-    <form>
+    <form action="/login" method="post">
         <label for="name">Name: </label>
         <input type="text" id="name" placeholder="name">
         <label for="password">Password: </label>
         <input type="text" id="password" placeholder="password">
-        <button type="button">Ok</button>
+        <button type="submit">Ok</button>
     </form>
 </body>
 </html>
