--- a/forms-html/templates/index.html
+++ b/forms-html/templates/index.html
@@ -8,9 +8,9 @@
     <h1>Form Test</h1>
     <form action="/login" method="post">
         <label for="name">Name: </label>
-        <input type="text" id="name" placeholder="name">
+        <input type="text" id="name" name="username" placeholder="name">
         <label for="password">Password: </label>
-        <input type="text" id="password" placeholder="password">
+        <input type="text" id="password" name="password" placeholder="password">
         <button type="submit">Ok</button>
     </form>
 </body>
