--- a/forms-html/templates/index.html
+++ b/forms-html/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Form Test</h1>
-    <form action="/login" method="post">
+    <form action="{{ url_for('receive_data') }}" method="post">
         <label for="name">Name: </label>
         <input type="text" id="name" name="username" placeholder="name">
         <label for="password">Password: </label>
